# otus_pro

./: .gitignore
.github/workflows/: ci.yml
homework_1/: CMakeLists.txt
homework_1/.github/workflows/: ci.yml
homework_1/src/: main.cpp
